# Aurora-Ratio

./: .replit  LICENSE.txt  README.md  auth_senha.py  dashboard.py  market_data.py  painel_geografico.py  planos.py  prova_hash_dashboard.txt  pyproject.toml  registro.py  requeriments.txt  sentimento_publico.py  streamlit_app.py  strip_helper.py
Aurora-Ratio/: index
Aurora-Ratio/logs/refs/heads/: main
Aurora-Ratio/refs/heads/: main
app\/: alerta_popup.py  auth.py  cadastro.py  comentarios.py  main.py  notificador.py  pagamento.py  radaralfa.py  routes.py  sentiment.py  sheduler.py  zip_utils.py
middleware\/: monitoramento.py
modules/: checkout_intervalos.py
pages/: 1_Usuario.py  2_vio.py  3_CEO.py  4_Game_Master.py  5_Concelho_Imperial.py  6_Mentoria.py  8_Metas_estrategicas.py  9_Missao_imperial.py  aurora_connect.py  login.py  painel_noticias.py
scripts\/: .enve.local  .gitignore
scripts\/utils/: 7_Fluxo_Caixa.py  email_helper.py  logger.py  missoes.py  temporal_gate.py
utils/: beckup_supabase.py  ia_predictor.py  mentoria.py
utils/.streamlit/: config.toml
